Alteração dos estilos CSS

--- a/assets/css/orcamento.css
+++ b/assets/css/orcamento.css
@@ -117,6 +117,7 @@ button {
     font-size: 1rem;
     cursor: pointer;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    height: 44px;
 }
 
 button:hover {
