--- a/assets/css/consulta-orcamentos.css
+++ b/assets/css/consulta-orcamentos.css
@@ -68,6 +68,7 @@ button {
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
+    margin-right: 5px;
 }
 
 button:hover {
@@ -92,12 +93,14 @@ button:hover {
     display: none;
 }
 
-.popup-content {
+.popup-content-a {
+    overflow-y: auto;
     background: white;
     padding: 20px;
     border-radius: 5px;
     text-align: left;
-    width: 400px;
+    width: 600px;
+    height: 85%;
 }
 
 .popup-sucesso {
@@ -125,3 +128,4 @@ button:hover {
         opacity: 0;
     }
 }
+
